@@ -107,7 +107,6 @@
 	if(inputParameters$shiny)	requireNamespace("shiny")
 	
 	# create the plots
-	begin <- Sys.time()
 	tmp <- sapply(seq_along(listPlotsPerSubject), function(i){
 		if(inputParameters$shiny)	incProgress(detail = paste("Export profile:", names(listPlotsPerSubject)[i]))
 		pdf(fileNames[i], width = textWidthInches, height = figHeightInches[i])
@@ -120,8 +119,6 @@
 		print(listPlotsPerSubject[[i]])
 		tmp <- dev.off()
 	})
-	end <- Sys.time()
-	end-begin
 	
 	# include the graphics in the report
 	tmp <- sapply(seq_along(listPlotsPerSubject), function(i){
